--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style/style.css">
     <title>Document</title>
 </head>
 <body>
+    <div class="container">
+        <p id="gameName"> Blackjack </p>
+        <p id="gameExpression"> Want to play a round? </p>
+        <p id="cards"> Cards: </p>
+        <p id="Sum"> Sum:</p>
+        <button id="startNew">START GAME</button>
+        <button id="newCard">NEW CARD</button>
+        <button id="reset">RESET</button>
+        <p id="score"> Habib: $</p>
+    </div>
     
+
+
 
     <script src="assets/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="assets/js/index.js"></script>
