--- a/index.html
+++ b/index.html
@@ -11,25 +11,21 @@
     <div class="text-center">
         <h1 class="text-warning text-center">Blackjack</h1>
          <div>
-            <p id="message-el" class="text-light">Want to play a round?</p>
-            <p id="cards-el" class="text-light">Card:</p>
-            <p id="sum-el" class="text-light">Sum:</p>
+            <p id="messageEl" class="text-light">Want to play a round?</p>
+            <p id="cardsEl" class="text-light">Card: </p>
+            <p id="sumEl" class="text-light">Sum:</p>
             <div class="btn-start-game btn-sm mb-2 b-0">
-                <button class="btn btn-warning text-success" onclick="startGamme()" id="start">START GAME</button>
-                <button class="btn btn-warning text-success" onclick="newCard()" id="new">NEW CARD</button>
+                <button class="btn btn-warning text-success"  id="startBtn">START GAME</button>
+                <button class="btn btn-warning text-success"  id="newBtn">NEW CARD</button>
                 <button class="btn btn-danger text-dark" onclick="reset()" id="reset">RESET GAME</button>
             </div>
-            <p id="player-el"></p>
+            <p id="playerEl"> HABIB : $ </p>
          </div>
     </div>
     
-    
-
-
-
 
 
     <script src="/assets/bootStrap/bootstrap-script.js"></script>
-    <script src="/assets/js/script.js"></script>
+    <script src="/assets/js/index.js"></script>
 </body>
 </html>
